--- a/mki-web/src/pages/index.astro
+++ b/mki-web/src/pages/index.astro
@@ -11,6 +11,7 @@ import { getTranslations } from '../i18n/utils';
 const currentLocale = (Astro.currentLocale as Locale) || 'ar';
 const arHomepageUrl = getRelativeLocaleUrl('ar', '');
 const enHomepageUrl = getRelativeLocaleUrl('en', '');
+const frHomepageUrl = getRelativeLocaleUrl('fr', '');
 const t = getTranslations(currentLocale);
 ---
 
@@ -19,6 +20,7 @@ const t = getTranslations(currentLocale);
     locale={currentLocale}
     arabicUrl={arHomepageUrl}
     englishUrl={enHomepageUrl}
+    frenchUrl={frHomepageUrl}
     t={t}
   />
 </Layout>
